--- a/src/styles/Feed.module.css
+++ b/src/styles/Feed.module.css
@@ -32,8 +32,8 @@
 .header h1 {
   margin: 0;
   font-size: 1.5rem;
-  color: #333333;
-  font-weight: normal;
+  color: #15803d;
+  font-weight: bold;
 }
 
 .nav {
